try to set push -u

--- a/index.html
+++ b/index.html
@@ -9,5 +9,11 @@
    <div>to see the git and github programs </div> 
    <br>
    hi there was an error in this 
+   <ul>
+    <li>HI </li>
+    <li>no </li>
+    <li>bye </li>
+    <li>theregit</li>
+   </ul>
 </body>
 </html>
